workspaces/www.monalisatalk-fan.site/pages/v/[videoId]/index.module.css
.videoDetailPage {
  & > .container {
    display: grid;
    grid-template:
      'body thumbnail'  auto
      'body related'    1fr
      /auto 420px;
    padding-top: var(--margin-6x);

    @media (--header-small-viewport) {
      grid-template:
        'thumbnail' auto
        'body'      auto
        'related'   auto
        /auto;
      padding-top: 0;
    }
  }

  & > .container > .thumbnail {
    grid-area: thumbnail;
  }

  & > .container > .related {
    grid-area: related;
    margin-top: var(--margin-3x);
  }

  & > .container > .body {
    grid-area: body;
    padding-top: var(--margin-5x);
    margin-right: var(--margin-3x);

    @media (--small-viewport) {
      padding-top: var(--margin-3x);
      margin-right: 0;
    }
  }
}

.videoDetailThumbnail {
  --play-icon-size: 8px;

  & > .image {
    @media (--small-viewport) {
      width: calc(100% + var(--margin-2x) * 2);
      margin-left: calc(var(--margin-2x) * -1);
    }
  }

  & > .link {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding: var(--margin-1x) 0;
    margin-top: var(--margin-2x);
    font-weight: bold;
    line-height: 1.5;
    color: var(--color-youtube);
    background: transparent;
    border: 2px solid var(--color-youtube);
  }

  & > .link::before {
    position: absolute;
    top: 50%;
    left: var(--margin-2x);
    z-index: --z-index-positive;
    display: block;
    width: 0;
    height: 0;
    content: '';
    border-top: var(--play-icon-size) solid transparent;
    border-right: 0 solid transparent;
    border-bottom: var(--play-icon-size) solid transparent;
    border-left: calc(var(--play-icon-size) * 2) solid var(--color-youtube);
    transition: border-left-color 0.12s ease;
    transform: translateY(-50%);
  }

  & > .link::after {
    position: absolute;
    top: 0;
    right: 0;
    left: auto;
    display: block;
    width: 100%;
    height: 100%;
    content: '';
    background: var(--color-youtube);
    transition: transform 0.12s ease;
    transform: scale3d(0, 1, 1);
    transform-origin: top right;
  }

  & > .link:hover {
    color: var(--color-white);
  }

  & > .link:hover::before {
    border-left-color: var(--color-white);
  }

  & > .link:hover::after {
    right: auto;
    left: 0;
    transform: scale3d(1, 1, 1);
    transform-origin: top left;
  }

  & > .link > .text {
    position: relative;
    z-index: --z-index-positive;
  }
}

.videoDetailBody {
  & > .title {
    font-size: 2.4rem;
    line-height: 1.5;
  }

  & > .date {
    display: inline-block;
    padding: 0 var(--margin-2x);
    margin-top: var(--margin-1x);
    line-height: 2;
    color: var(--color-blue);
    background: var(--color-black);
    border-radius: 100vw;
  }

  & > .description {
    margin-top: var(--margin-4x);

    @media (--small-viewport) {
      margin-top: var(--margin-3x);
    }
  }

  & > .description > .paragraph {
    margin-top: var(--margin-1x);
    line-height: 1.8;
    white-space: pre-wrap;
  }
}

.videoDetailRelated {
  & > .item {
    display: block;
    padding: var(--margin-2x) 0;
  }

  & > .item:not(:first-child) {
    border-top: 1px solid #777;
  }

  & > .item.Disabled {
    color: var(--color-text-secondary);
  }

  & > .item > .label {
    font-size: 1.2rem;
    font-weight: bold;
    color: var(--color-text-secondary);
  }

  & > .item > .title {
    display: block;
    margin-top: var(--margin-1x);
    font-size: 1.4rem;
    line-height: 1.5;
  }

  & > .item.Disabled > .title {
    text-align: center;
  }

  & > .item:not(.Disabled):hover > .title {
    text-decoration: underline;
  }
}

